--- a/Art.html
+++ b/Art.html
@@ -56,8 +56,8 @@
             <div class="first-page">
                 <header>
                     <p>
-                        <span>&#139;</span>
-                        <span>&#155;</span>
+                        <span class="flesh">&#139;</span>
+                        <span class="flesh">&#155;</span>
                     </p>
                 </header>
                 <div class="products">
