--- a/Art.html
+++ b/Art.html
@@ -10,7 +10,6 @@
     <link rel="icon" href="logo.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>You TaLenT</title>
 </head>
 
@@ -27,9 +26,13 @@
 
             </div>
         </div>
+        <div class="plus"><input type="file" id="plus" class="input-file"><label for="plus"><img
+                    src="https://www.shareicon.net/download/2015/08/12/83992_plus.ico" width="30" height="30">Upload
+            </label>
+        </div>
         <div class="nav2">
-            <button>Sing in</button>
-            <button>Sing up</button>
+            <button class="bt1">Log in</button>
+            <button class="bt2">Sing up</button>
             <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__480.png" height="70"
                 width="70" style="border-radius: 50px;">
 
