--- a/Art.html
+++ b/Art.html
@@ -349,7 +349,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div><br>
+                        <h3 style="color: rgb(255, 255, 255); text-align: center;">©Copyrigth By Hayder labidi</h3>
                     </div>
                 </div>
         </div>
