--- a/Art.html
+++ b/Art.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="logo.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <title>You TaLenT</title>
+    <title>You ToP</title>
 </head>
 
 <body>
