--- a/Art.html
+++ b/Art.html
@@ -18,7 +18,7 @@
         <div class="nav-barre">
             <div class="nav1">
                 <img src="logo.png" width="180" height="90">
-                <h1 style="font-size: 50px; font-family:Arial, Helvetica, sans-serif;">You TaLenT</h1>
+                <h1 style="font-size: 50px; font-family:Arial, Helvetica, sans-serif;">YOU TOP</h1>
                 <div class="search">
                     <input type="search" class="search-barre">
                     <img src="https://pixsector.com/cache/e7836840/av6584c34aabb39f00a10.png" height="100" width="100">
