--- a/Art.html
+++ b/Art.html
@@ -350,7 +350,7 @@
                                 </div>
                             </div>
                         </div><br>
-                        <h3 style="color: rgb(255, 255, 255); text-align: center;">©Copyrigth By Hayder labidi</h3>
+                        <h3 style="color: rgb(255, 255, 255); text-align: center;">©Copyrigth By Nour Nsiri</h3>
                     </div>
                 </div>
         </div>
